--- a/manifest.json
+++ b/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "Todo",
-  "name": "Todo-simple",
+  "short_name": "Agenda",
+  "name": "Agenda",
   "icons": [{
     "src": "imagens/icons/icon-128x128.png",
       "sizes": "128x128",
@@ -22,7 +22,7 @@
       "sizes": "256x256",
       "type": "image/png"
     }],
-  "start_url": "https://andersonprante.github.io/todo-simple/index.html",
+  "start_url": "https://macgyverbest.github.io/Agenda/index.html",
   "display": "standalone",
   "background_color": "#3E4EB8",
   "theme_color": "#2F3BA2"
